...
                                      onPressed: (){
                                        if(formKey.currentState!.validate()) {
                                          String email = tfEmail.text.trim();
                                          String password = tfPassword.text.trim();
                                          context.read<UserLoginCubit>().login(email, password);
                                        }
                                      }, child: Text("Log In", style: TextStyle(fontSize: 20.sp),)),
                                ),
                              ),
                              SizedBox(height: 60.h,),
                              Row(
                                mainAxisAlignment: MainAxisAlignment.center,
                                children: [
...
